# 9-bit-hell-digital-game-development-tp

./: CMakeLists.txt  README.md  map-repo-files.bash
Assets/Sprites/Collectables/Light/: Light.json
Assets/Sprites/EyeEnemy/: EyeEnemy.json
Assets/Sprites/EyeMiniboss/: EyeMiniboss.json
Assets/Sprites/FatEnemy/: FatEnemy.json
Assets/Sprites/FatMiniboss/: FatMiniboss.json
Assets/Sprites/HornEnemy/: HornEnemy.json
Assets/Sprites/HornMiniboss/: HornMiniboss.json
Assets/Sprites/Player/: Player.json
Assets/Sprites/Principal/: Principal.json
Shaders/: Base.frag  Base.vert
Source/: Game.cpp  Game.h
Source/Actors/: Actor.h  Background.cpp  Background.h  Block.cpp  Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  CorruptionOverlay.cpp  CorruptionOverlay.h  Enemy.cpp  Enemy.h  EyeMiniboss.cpp  EyeMiniboss.h  EyeProjectile.cpp  EyeProjectile.h  FallingHand.cpp  FallingHand.h  FatMiniboss.cpp  FatMiniboss.h  Goomba.cpp  GroundSpike.cpp  GroundSpike.h  HUD.cpp  HUD.h  Healer.cpp  Healer.h  HornMiniboss.cpp  HornMiniboss.h  Mario.cpp  Mario.h  MenuBackground.cpp  MenuBackground.h  MenuScreen.cpp  MenuScreen.h  Miniboss.cpp  Miniboss.h  PauseScreen.cpp  PauseScreen.h  Player.cpp  (+15 more)
Source/Audio/: AudioSystem.cpp  AudioSystem.h
Source/Components/: ParticleSystemComponent.cpp  ParticleSystemComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DrawComponent.cpp  DrawComponent.h  RectComponent.cpp  RectComponent.h  StaticSpriteComponent.cpp  StaticSpriteComponent.h  UIButtonComponent.cpp  UIButtonComponent.h  UITextComponent.cpp  UITextComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp
Source/Scenes/: GameOverScene.cpp  GameOverScene.h  GameplayScene.cpp  GameplayScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  UpgradeScene.cpp  UpgradeScene.h
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
